Granular concurrent code generation